--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Palo/Mine Look-up Table by @starl3xx#2691 and @Jucci#0007"
+      content=" CryptoMines Sheets by @starl3xx#2691 and @Jucci#0007"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cryptomines Look-up Table (Auto-Refresh)</title>
+    <title> CryptoMines Sheets (Auto-Refresh)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
